--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@use-it/event-listener": "^0.1.7",
     "bootstrap": "^5.1.3",
     "material-icons": "^1.11.1",
     "react": "^18.1.0",
